--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Tailwind</title>
-    <link rel="stylesheet" href="css/output.css">
+    <link rel="stylesheet" href="public/css/output.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
@@ -75,7 +75,7 @@
     </footer>
 
     <!-- Enlace a los scripts de JavaScript -->
-    <script src="../src/js/main.js"></script>
+    <script src="src/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
 </body>
