--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div class="navbar-center">
-        <a class="btn btn-ghost font-serif hover:bg-transparent"><img class="filter invert brightness-0 w-40" src="/public/assets/images/monique-logo.png" alt="Logo-de-Monique"></a>
+        <a class="btn btn-ghost font-serif hover:bg-transparent"><img class="filter invert brightness-0 w-40" src="../public/assets/images/monique-logo.png" alt="Logo-de-Monique"></a>
     </div>
     <div class="navbar-end">
       <button class="btn btn-ghost btn-circle hover:bg-opacity-20 hover:bg-black">
