--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="">
     <header>
-        <div id="navbar-container"></div>
+        <nav id="navbar"></nav>
     </header>
     
     <main>
@@ -74,8 +74,7 @@
 
     </footer>
 
-    <!-- Enlace a los scripts de JavaScript -->
-    <script src="src/js/main.js"></script>
+    <script src="src/js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
 </body>
