--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="light">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monique</title>
     <link rel="stylesheet" href="public/css/output.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> 
 </head>
-<body class="">
+<body class="font-poppins">
     <header>
         <nav id="navbar"></nav>
     </header>
@@ -21,6 +21,7 @@
                 <div class="hidden duration-1000 ease-in-out h-full w-full" data-carousel-item>
                     <img src="public/assets/images/fondo-productos.jpg" class="block w-full h-full object-cover" alt="Imagen 1">
                     <h1 class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white text-4xl">Texto en el centro</h1>
+                    
                 </div>
                 <!-- Item 2 -->
                 <div class="hidden duration-1000 ease-in-out h-full w-full" data-carousel-item>
