--- a/index.html
+++ b/index.html
@@ -21,7 +21,21 @@
                 <div class="hidden duration-1000 ease-in-out h-full w-full" data-carousel-item>
                     <img src="public/assets/images/fondo-productos.jpg" class="block w-full h-full object-cover" alt="Imagen 1">
                     <h1 class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white text-4xl">Texto en el centro</h1>
-                    
+                    <div class="hero min-h-screen absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                        <!--<div class="hero-content flex-col lg:flex-row-reverse">
+                          <img
+                            src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp"
+                            class="max-w-sm rounded-lg shadow-2xl" />
+                          <div>
+                            <h1 class="text-5xl font-bold">Box Office News!</h1>
+                            <p class="py-6">
+                              Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                              quasi. In deleniti eaque aut repudiandae et a id nisi.
+                            </p>
+                            <button class="btn btn-primary">Get Started</button>
+                          </div>
+                        </div>-->
+                    </div>
                 </div>
                 <!-- Item 2 -->
                 <div class="hidden duration-1000 ease-in-out h-full w-full" data-carousel-item>
@@ -55,7 +69,7 @@
 
     </footer>
 
-    <script src="src/js/navbar.js"></script>
+    <script src="src/componentes/navbar.js"></script>
     <script src="src/js/navbar-activo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
