--- a/index.html
+++ b/index.html
@@ -19,22 +19,26 @@
             <div class="relative h-full w-full overflow-hidden">
                 <!-- Item 1 -->
                 <div class="hidden duration-1000 ease-in-out h-full w-full" data-carousel-item>
-                    <img src="public/assets/images/fondo-productos.jpg" class="block w-full h-full object-cover" alt="Imagen 1">
-                    <h1 class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white text-4xl">Texto en el centro</h1>
-                    <div class="hero min-h-screen absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
-                        <!--<div class="hero-content flex-col lg:flex-row-reverse">
-                          <img
-                            src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp"
-                            class="max-w-sm rounded-lg shadow-2xl" />
-                          <div>
-                            <h1 class="text-5xl font-bold">Box Office News!</h1>
-                            <p class="py-6">
-                              Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                              quasi. In deleniti eaque aut repudiandae et a id nisi.
-                            </p>
-                            <button class="btn btn-primary">Get Started</button>
-                          </div>
-                        </div>-->
+                    <img src="public/assets/images/fondo1.jpg" class="block w-full h-full object-cover" alt="Imagen 1">
+                    <div class="border-r border-b absolute top-1/3 sm:top-1/2 xl:top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
+                        <h1 class="text-4xl font-extrabold text-gray-200 dark:text-white sm:text-5xl xl:text-6xl">
+                            Realza tu
+                            <span class="text-transparent bg-clip-text bg-gradient-to-tr from-pink-500 to-pink-300">
+                            belleza
+                            </span>
+                            con productos de la
+                            <span class="text-transparent bg-clip-text bg-gradient-to-tr from-pink-500 to-pink-300">
+                            mejor calidad
+                            </span>
+                        </h1>
+                        
+                        <div class="flex justify-center">
+                        <button class="mt-5 shadow-lg relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden lg:text-xl md:text-lg text-sm font-semibold text-white rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 hover:scale-105 focus:scale-100 hover:transition-transform">
+                            <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-black bg-opacity-10 backdrop-blur-lg dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                            Ver productos
+                            </span>
+                        </button>
+                        </div>
                     </div>
                 </div>
                 <!-- Item 2 -->
