--- a/index.html
+++ b/index.html
@@ -41,28 +41,49 @@
                         </div>
                     </div>
 
-                    <div class="absolute top-1/2 right-0 md:right-0 xl:right-0 -translate-y-1/2 -translate-x-1/4 text-5xl flex flex-col items-center text-center ">
-                        <h2 class="text-4xl font-normal text-gray-200 sm:text-5xl xl:text-5xl text-start text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
+                    <div class="absolute top-1/2 right-0 -translate-x-1/5 sm:-translate-x-1/4 xl:-translate-x-1/4 xl:right-0 -translate-y-1/2  text-5xl flex flex-col items-center text-center ">
+                        <h2 class="text-3xl sm:text-4xl xl:text-5xl font-normal text-gray-200 text-start text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
                             Línea
                             <span class="text-transparent bg-clip-text bg-gradient-to-bl from-purple-400 to-purple-950 text-shadow-none font-bold font-serif">
                             VIOLETTE
                             </span>
                         </h2>
 
-                        <h3 class="m-5 text-4xl italic font-serif text-gray-50 sm:text-5xl xl:text-xl text-start text-shadow-md bg-white bg-opacity-25 p-2 w-fit shadow-lg backdrop-blur-sm transform skew-x-12">
+                        <h3 class="m-5 text-base sm:text-lg xl:text-xl italic font-serif text-gray-50 text-start text-shadow-md bg-white bg-opacity-25 p-2 w-fit shadow-lg backdrop-blur-sm transform skew-x-12">
                             Floral - Frutal
                         </h3>
 
-                        <div class="relative rounded-full overflow-visible w-52 h-52 mx-auto">
-                            <div class="slide active">
-                                <h4 class="text-3xl font-normal text-gray-200 sm:text-5xl xl:text-lg text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 rounded-md">
-                                    Crema corporal perfumada
+                        <div class="relative rounded-full overflow-visible w-32 h-32 sm:w-42 sm:h-42 xl:w-52 xl:h-52">
+                            <div class="slide active flex flex-col items-center">
+                                <h4 class="text-xs sm:text-sm xl:text-sm font-light text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md ">
+                                    Crema corporal perfumada Violette
                                 </h4>
-                                <img src="public/assets/images/perfume-violette.png"  alt="perfume-violette-monique">
-                                <p>100g</p>
+                                <img src="public/assets/images/crema-violette.png"  alt="perfume-violette-monique" class="p-2 sombraImagen">
+                                <p class="text-xs sm:text-sm xl:text-sm font-light text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md w-fit">
+                                    100g
+                                </p>
                             </div>
-                            <img src="public/assets/images/crema-violette.png" class="slide" alt="crema-violette-monique">
-                            <img src="public/assets/images/perfume-floral.png" class="slide" alt="perfume-floral-monique">
+
+                            <div class="slide flex flex-col items-center">
+                                <h4 class="text-xs sm:text-sm xl:text-sm font-light text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md ">
+                                    Colonia Violette
+                                </h4>
+                                <img src="public/assets/images/perfume-violette.png"  alt="perfume-violette-monique" class="p-2 sombraImagen">
+                                <p class="text-xs sm:text-sm xl:text-sm font-light text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md w-fit">
+                                    150g
+                                </p>
+                            </div>
+
+                            <div class="slide flex flex-col items-center">
+                                <h4 class="text-xs sm:text-sm xl:text-sm font-light text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md ">
+                                    Perfume Violette
+                                </h4>
+                                <img src="public/assets/images/perfume-floral.png"  alt="perfume-violette-monique" class="p-2 sombraImagen">
+                                <p class="text-xs sm:text-sm xl:text-sm font-light text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md w-fit">
+                                    60ml y 100ml
+                                </p>
+                            </div>
+                            
                         </div>
                           
 
@@ -113,7 +134,7 @@
     </footer>
 
     <script src="src/componentes/navbar.js"></script>
-    <scrit src="src/js/slider.js"></scrit> 
+    <script src="src/js/slider.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
 </body>
