--- a/index.html
+++ b/index.html
@@ -18,44 +18,44 @@
             <!-- Carousel wrapper -->
             <div class="relative h-full w-full overflow-hidden">
                 <!-- Item 1 -->
-                <div class="hidden duration-700 ease-in-out h-full w-full" data-carousel-item>
+                <div class="hidden duration-700 ease-in-out h-full w-full" data-carousel-item> 
                     <img src="public/assets/images/fondo1.jpg" class="block w-full h-full object-cover" alt="Imagen 1">
-                    <div class="absolute top-1/2 sm:top-1/2 xl:top-1/2 left-1/3 -translate-x-1/2 -translate-y-1/2 text-5xl bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
-                        <h1 class="text-4xl font-extrabold text-gray-200 dark:text-white sm:text-5xl xl:text-6xl text-start text-shadow-md grid">
+                    <div class="absolute top-1/4 mt-8 left-1/2 w-full xl:w-auto xl:left-1/3 md:w-auto md:left-1/3  md:top-1/2 xl:top-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
+                        <h1 class="justify-center text-start text-2xl font-extrabold text-gray-200 dark:text-white sm:text-4xl md:text-5xl xl:text-6xl text-shadow-md grid">
                             Realza tu
-                            <span class="text-transparent bg-clip-text bg-gradient-to-tr from-pink-400 to-pink-200 text-shadow-none">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-tr from-pink-400 to-pink-200 shadowColor">
                             belleza
                             </span>
                             con productos de la
-                            <span class="text-transparent bg-clip-text bg-gradient-to-tr from-pink-400 to-pink-200 text-shadow-none">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-tr from-pink-400 to-pink-200 shadowColor">
                             mejor calidad
                             </span>
                         </h1>
                         
-                        <div class="flex">
-                        <button class="btn border-none text-shadow-md mt-5 shadow-lg p-0.5 mb-2 overflow-hidden lg:text-xl md:text-lg text-sm font-bold text-gray-50 rounded-xl group bg-gradient-to-b from-pink-200 to-purple-500 hover:scale-105 hover:transition-transform">
-                            <span class="relative px-10 py-2.5 transition-all ease-in duration-75 bg-black bg-opacity-10 backdrop-blur-lg dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                        <div class="flex items-center justify-center md:justify-start lg:justify-start mr-10 sm:mr-40">
+                        <button class="btn border-none text-shadow-md mt-5 shadow-lg p-2 md:p-4 xl:p-5 mb-2 overflow-hidden lg:text-3xl md:text-2xl text-lg font-bold text-gray-50 rounded-xl group bg-gradient-to-b from-pink-200 to-purple-500 hover:scale-105 hover:transition-transform h-auto">
+                            <span class="relative px-6 transition-all ease-in duration-75">
                             <p>Ver productos</p>
                             </span>
                         </button>
                         </div>
                     </div>
 
-                    <div class="absolute top-1/2 right-0 -translate-x-1/5 sm:-translate-x-1/4 xl:-translate-x-1/4 xl:right-0 -translate-y-1/2  text-5xl flex flex-col items-center text-center ">
-                        <h2 class="text-3xl sm:text-4xl xl:text-5xl font-normal text-gray-200 text-start text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
+                    <div class="absolute top-1/2 right-0 lg:-translate-x-1/4 xl:-translate-x-1/4 xl:right-0 md:-translate-y-1/2 md:top-1/2 md:right-0 text-5xl flex flex-col items-center text-center ">
+                        <h2 class="text-lg sm:text-4xl xl:text-5xl font-normal text-gray-200 text-start text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
                             Línea
-                            <span class="text-transparent bg-clip-text bg-gradient-to-bl from-purple-400 to-purple-950 text-shadow-none font-bold font-serif">
+                            <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-bl from-purple-400 to-purple-900 text-shadow-none font-bold font-serif">
                             VIOLETTE
                             </span>
                         </h2>
 
-                        <h3 class="m-5 text-base sm:text-lg xl:text-xl italic font-serif text-gray-50 text-start text-shadow-md bg-white bg-opacity-25 p-2 w-fit shadow-lg backdrop-blur-sm transform skew-x-12">
+                        <h3 class="m-2 text-sm md:text-lg xl:text-xl italic font-serif text-gray-50 text-start text-shadow-md bg-white bg-opacity-25 p-1 md:p-2 xl:p-2 w-fit shadow-lg backdrop-blur-sm transform skew-x-12">
                             Floral - Frutal
                         </h3>
 
                         <div class="relative rounded-full overflow-visible w-32 h-32 sm:w-42 sm:h-42 xl:w-52 xl:h-52">
                             <div class="slide active flex flex-col items-center">
-                                <h4 class="text-xs sm:text-sm xl:text-sm font-light text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md ">
+                                <h4 class="text-xs md:text-sm xl:text-sm font-thin text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md ">
                                     Crema corporal perfumada Violette
                                 </h4>
                                 <img src="public/assets/images/crema-violette.png"  alt="perfume-violette-monique" class="p-2 sombraImagen">
