--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
                     <div class="absolute top-1/4 mt-8 left-1/2 w-full xl:w-auto xl:left-1/3 md:w-auto md:left-1/3  md:top-1/2 xl:top-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
                         <h1 class="justify-center text-start text-2xl font-extrabold text-gray-200 dark:text-white sm:text-4xl md:text-5xl xl:text-6xl text-shadow-md grid">
                             Realza tu
-                            <span class="text-transparent bg-clip-text bg-gradient-to-tr from-pink-400 to-pink-200 shadowColor">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-pink-400 to-pink-200 shadowColor">
                             belleza
                             </span>
                             con productos de la
-                            <span class="text-transparent bg-clip-text bg-gradient-to-tr from-pink-400 to-pink-200 shadowColor">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-br from-pink-400 to-pink-200 shadowColor">
                             mejor calidad
                             </span>
                         </h1>
                         
                         <div class="flex items-center justify-center md:justify-start lg:justify-start mr-10 sm:mr-40">
-                        <button class="btn border-none text-shadow-md mt-5 shadow-lg p-2 md:p-4 xl:p-5 mb-2 overflow-hidden lg:text-3xl md:text-2xl text-lg font-bold text-gray-50 rounded-xl group bg-gradient-to-b from-pink-200 to-purple-500 hover:scale-105 hover:transition-transform h-auto">
+                        <button class="btn border-none text-shadow-md mt-8 sombraBoton p-2 md:p-4 xl:p-5 mb-2 overflow-hidden lg:text-3xl md:text-2xl text-lg font-bold text-gray-50 rounded-3xl group bg-gradient-to-b from-pink-200 to-purple-800 hover:scale-105 hover:transition-transform h-auto">
                             <span class="relative px-6 transition-all ease-in duration-75">
                             <p>Ver productos</p>
                             </span>
@@ -44,7 +44,7 @@
                     <div class="absolute top-1/2 right-0 lg:-translate-x-1/4 xl:-translate-x-1/4 xl:right-0 md:-translate-y-1/2 md:top-1/2 md:right-0 text-5xl flex flex-col items-center text-center ">
                         <h2 class="text-lg sm:text-4xl xl:text-5xl font-normal text-gray-200 text-start text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
                             Línea
-                            <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-bl from-purple-400 to-purple-900 text-shadow-none font-bold font-serif">
+                            <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-b from-purple-400 to-purple-600 text-shadow-sm font-bold font-serif">
                             VIOLETTE
                             </span>
                         </h2>
