--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="hidden duration-700 ease-in-out h-full w-full" data-carousel-item> 
                     <img src="public/assets/images/fondo1.jpg" class="block w-full h-full object-cover" alt="Imagen 1">
                     <div class="absolute top-1/4 mt-8 left-1/2 w-full xl:w-auto xl:left-1/3 md:w-auto md:left-1/3  md:top-1/2 xl:top-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
-                        <h1 class="justify-center text-start text-2xl font-extrabold text-gray-200 dark:text-white sm:text-4xl md:text-5xl xl:text-6xl text-shadow-md grid">
+                        <h1 class="justify-center text-start text-3xl font-extrabold text-gray-200 dark:text-white sm:text-4xl md:text-5xl xl:text-6xl text-shadow-md grid">
                             Realza tu
                             <span class="text-transparent bg-clip-text bg-gradient-to-b from-pink-400 to-pink-200 shadowColor">
                             belleza
@@ -33,7 +33,7 @@
                         </h1>
                         
                         <div class="flex items-center justify-center md:justify-start lg:justify-start mr-10 sm:mr-40">
-                        <button class="btn border-none text-shadow-md mt-8 sombraBoton p-2 md:p-4 xl:p-5 mb-2 overflow-hidden lg:text-3xl md:text-2xl text-lg font-bold text-gray-50 rounded-3xl group bg-gradient-to-b from-pink-200 to-purple-800 hover:scale-105 hover:transition-transform h-auto">
+                        <button class="btn border-none text-shadow-md mt-8 sombraBoton p-4 md:p-4 xl:p-5 mb-2 overflow-hidden lg:text-3xl md:text-2xl text-xl font-bold text-gray-50 rounded-3xl group bg-gradient-to-b from-pink-200 to-purple-800 hover:scale-105 hover:transition-transform h-auto">
                             <span class="relative px-6 transition-all ease-in duration-75">
                             <p>Ver productos</p>
                             </span>
@@ -42,18 +42,18 @@
                     </div>
 
                     <div class="absolute top-1/2 right-0 lg:-translate-x-1/4 xl:-translate-x-1/4 xl:right-0 md:-translate-y-1/2 md:top-1/2 md:right-0 text-5xl flex flex-col items-center text-center ">
-                        <h2 class="text-lg sm:text-4xl xl:text-5xl font-normal text-gray-200 text-start text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
+                        <h2 class="text-xl sm:text-4xl xl:text-5xl font-normal text-gray-200 text-start text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
                             Línea
                             <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-b from-purple-400 to-purple-600 text-shadow-sm font-bold font-serif">
                             VIOLETTE
                             </span>
                         </h2>
 
-                        <h3 class="m-2 text-sm md:text-lg xl:text-xl italic font-serif text-gray-50 text-start text-shadow-md bg-white bg-opacity-25 p-1 md:p-2 xl:p-2 w-fit shadow-lg backdrop-blur-sm transform skew-x-12">
+                        <h3 class="m-2 text-base md:text-lg xl:text-xl italic font-serif text-gray-50 text-start text-shadow-md bg-white bg-opacity-25 p-1 md:p-2 xl:p-2 w-fit shadow-lg backdrop-blur-sm transform skew-x-12">
                             Floral - Frutal
                         </h3>
 
-                        <div class="relative rounded-full overflow-visible w-32 h-32 sm:w-42 sm:h-42 xl:w-52 xl:h-52">
+                        <div class="relative rounded-full overflow-visible w-40 h-40 sm:w-42 sm:h-42 xl:w-52 xl:h-52">
                             <div class="slide active flex flex-col items-center">
                                 <h4 class="text-xs md:text-sm xl:text-sm font-thin text-gray-200 text-center text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-1 rounded-md ">
                                     Crema corporal perfumada Violette
