--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             belleza
                             </span>
                             con productos de la
-                            <span class="text-transparent bg-clip-text bg-gradient-to-br from-pink-300 to-pink-200 shadowColor">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-pink-300 to-pink-200 shadowColor">
                             mejor calidad
                             </span>
                         </h1>
