--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             <div class="relative h-full w-full overflow-hidden">
                 <!-- Item 1 -->
                 <div class="hidden duration-700 ease-in-out h-full w-full" data-carousel-item>
-                    <span class="hidden xl:flex w-full h-full">
+
+                    <div class="absolute inset-0 bg-gradient-to-t from-purple-400 to-purple-950 md:opacity-20 xl:opacity-20 opacity-30 z-0"></div>
+
+                    <span class="hidden md:flex xl:flex w-full h-full">
                         <img src="public/assets/images/fondo1.jpg" class="w-full h-full object-cover" alt="Imagen 1">
                     </span>
                     
-                    <!-- Imagen para dispositivos móviles (xs hasta sm) -->
                     <span class="flex xl:hidden w-full h-full">
                         <img src="public/assets/images/fondo2.jpg" class="w-full h-full object-cover" alt="Imagen 2">
                     </span>
