--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     <div class="absolute top-1/4 mt-8 left-1/2 w-full xl:w-auto xl:left-1/3 md:w-auto md:left-1/3  md:top-1/2 xl:top-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
                         <h1 class="justify-center text-start text-3xl font-extrabold text-gray-50 dark:text-white sm:text-4xl md:text-5xl xl:text-6xl text-shadow-md grid">
                             Realza tu
-                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-pink-100 to-pink-300 shadowColor">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-white to-pink-300 shadowColor">
                             belleza
                             </span>
                             con productos de la
-                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-pink-100 to-pink-300 shadowColor">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-white to-pink-300 shadowColor">
                             mejor calidad
                             </span>
                         </h1>
@@ -54,7 +54,7 @@
                     <div class="absolute top-1/2 right-0 lg:-translate-x-1/4 xl:-translate-x-1/4 xl:right-0 md:-translate-y-1/2 md:top-1/2 md:right-0 text-5xl flex flex-col items-center text-center ">
                         <h2 class="text-xl sm:text-4xl xl:text-5xl font-normal text-gray-200 text-start text-shadow-md bg-black bg-opacity-0 shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-md">
                             Línea
-                            <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-b from-purple-400 to-purple-600 text-shadow-sm font-bold font-serif">
+                            <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-b from-purple-300 to-purple-800 text-shadow-sm font-bold font-serif">
                             VIOLETTE
                             </span>
                         </h2>
