--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
     <script src="src/componentes/navbar.js"></script>
     <script src="src/js/slider.js"></script> 
+    <script src="src/js/navActivo.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
 </body>
