--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                         <div class="max-w-fit ml-auto rounded-lg shadow-xl backdrop-blur-lg bg-opacity-20 md:bg-none xl:bg-none md:shadow-none xl:shadow-none md:backdrop-blur-none">
                             <ul class="p-2 md:overflow-visible xl:overflow-visible flex flex-col font-medium mt-4 rounded-lg md:rounded-none xl:rounded-none bg-gray-50 bg-opacity-10 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent overflow-hidden">
                                 <li>
-                                    <a href="index.html" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
+                                    <a href="/" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Inicio
                                         <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-600 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
                                 </li>
                     
                                 <li>
-                                    <a href="public/pages/productos.html" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
+                                    <a href="/public/pages/productos.html" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Productos
                                         <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-600 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
