--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 </li>
                     
                                 <li>
-                                    <a href="public/pages/productos.html" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
+                                    <a href="../Monique/public/pages/productos.html" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Productos
                                         <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-600 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
