--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -61,8 +61,8 @@
 
     </footer>
 
-    <script src="src/js/slider.js"></script> 
-    <script src="src/js/navActivo.js"></script> 
+    <script src=""></script> 
+    <script src="../../src/js/navActivo.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
 </body>
