--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                     <div class="absolute top-1/4 w-full left-1/2 -translate-x-1/2 -translate-y-1/3 text-5xl p-2 pl-4 pr-4 rounded-md md:-translate-y-1/2 md:w-auto md:top-1/2 md:left-1/3 xl:w-auto xl:top-1/2 xl:left-1/3">
                         <h1 class="grid text-3xl font-extrabold text-gray-50 text-start sm:text-4xl md:text-5xl lg:text-6x1 xl:text-6xl text-shadow-md justify-start overflow-hidden">
                             <span class="shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">Realza tu</span>
-                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-white to-pink-400 shadowColor shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-pink-200 to-purple-400 shadowColor shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">
                                 belleza
                             </span>
                             <span class="shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">con productos de la</span>
-                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-white to-pink-400 shadowColor shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-pink-200 to-purple-400 shadowColor shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">
                                 mejor calidad
                             </span>
                         </h1>
         
                         <div class="flex items-center justify-start mt-2 xl:mt-5 sombraBoton">
-                            <button class="btn border-none text-shadow-md p-4 overflow-hidden font-bold text-gray-50 rounded-3xl group bg-gradient-to-b from-pink-200 to-purple-800 hover:scale-105 hover:transition-transform h-auto md:p-4 text-lg md:text-2xl xl:p-5 xl:text-3xl">
+                            <button class="btn border-none text-shadow-lg p-4 overflow-hidden font-extrabold text-gray-200 rounded-3xl group bg-gradient-to-b from-pink-200 to-purple-800 hover:scale-105 hover:transition-transform h-auto md:p-4 text-lg md:text-2xl xl:p-5 xl:text-3xl">
                                 <span class="px-4 xl:px-8 transition-all ease-in duration-75">
                                     <p>Ver productos</p>
                                 </span>
@@ -94,7 +94,7 @@
                     <div class="absolute top-1/2 mt-6 right-0 flex flex-col items-center text-center md:top-1/2 md:right-0 md:-translate-y-1/2 xl:right-0 xl:-translate-x-1/4 lg:-translate-x-1/4 md:mt-0 xl:mt-0">
                         <h2 class="text-xl font-normal text-gray-200 text-start text-shadow-md shadow-lg backdrop-blur-sm p-2 pl-4 pr-4 rounded-sm sm:text-4xl xl:text-5xl">
                                 Línea
-                            <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-b from-purple-300 to-purple-800 text-shadow-sm font-bold font-serif">
+                            <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-b from-purple-200 to-purple-500 text-shadow-sm font-bold font-serif">
                                 VIOLETTE
                             </span>
                         </h2>
