--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                     <div class="absolute top-1/4 w-full left-1/2 -translate-x-1/2 -translate-y-1/3 text-5xl p-2 pl-4 pr-4 rounded-md md:-translate-y-1/2 md:w-auto md:top-1/2 md:left-1/3 xl:w-auto xl:top-1/2 xl:left-1/3">
                         <h1 class="grid text-3xl font-extrabold text-gray-50 text-start sm:text-4xl md:text-5xl lg:text-6x1 xl:text-6xl text-shadow-md justify-start overflow-hidden">
                             <span class="shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">Realza tu</span>
-                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-white to-purple-300 shadowColor shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-purple-100 to-purple-400 shadowColor shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">
                                 belleza
                             </span>
                             <span class="shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">con productos de la</span>
-                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-white to-purple-300 shadowColor shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">
+                            <span class="text-transparent bg-clip-text bg-gradient-to-b from-purple-100 to-purple-400 shadowColor shadow-lg backdrop-blur-sm w-fit p-2 pl-4 pr-4">
                                 mejor calidad
                             </span>
                         </h1>
