--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </span>
                         </h2>
         
-                        <h3 class="italic font-serif text-base text-gray-50 text-start text-shadow-md bg-white bg-opacity-25 p-1 w-fit shadow-md backdrop-blur-sm transform skew-x-12 m-2 md:text-lg md:p-2 xl:text-xl xl:p-2">
+                        <h3 class="xl:mb-5 md:mb-4 mb-3 italic font-serif text-base text-gray-50 text-start text-shadow-md bg-white bg-opacity-25 p-1 w-fit shadow-md backdrop-blur-sm transform skew-x-12 m-2 md:text-lg md:p-2 xl:text-xl xl:p-2">
                             Floral - Frutal
                         </h3>
         
