--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monique</title>
+    <title>Monique - Cosméticos Chia</title>
     <link rel="icon" href="public/assets/images/icono.png">
     <link rel="stylesheet" href="public/css/output.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
