--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </h1>
         
                         <div class="flex items-center justify-start mt-2 xl:mt-5 sombraBoton">
-                            <button class="btn border-none text-shadow-lg p-4 overflow-hidden font-extrabold text-gray-200 rounded-3xl group bg-gradient-to-b from-pink-200 to-purple-500 hover:scale-105 hover:transition-transform h-auto md:p-4 text-lg md:text-2xl xl:p-5 xl:text-3xl">
+                            <button class="botonLavanda hover:bg-opacity-5 btn border-2 border-gray-300 hover:border-2 hover:border-gray-300 text-shadow-sm p-4 overflow-hidden font-extrabold text-gray-200 rounded-full group hover:scale-105 hover:transition-transform h-auto md:p-4 text-lg md:text-2xl xl:p-5 xl:text-3xl">
                                 <span class="px-4 xl:px-8 transition-all ease-in duration-75">
                                     <p>Ver productos</p>
                                 </span>
