--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="border-gray-200 fixed w-full z-20 top-0 start-0 md:bg-black xl:bg-black xl:bg-opacity-60 md:bg-opacity-60">
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto md xl">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto md xl p-4">
                     <div class="max-w-screen-xl flex flex-auto justify-between backdrop-blur-lg md:backdrop-blur-none md:p-0 xl:p-0">
                         <div class="flex items-center space-x-3 rtl:space-x-reverse">
                             <img src="../assets/images/monique-logo.png" class="ml-2 h-5 md:h-6 xl:h-10 invert" alt="Monique Logo"/>
