--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -13,8 +13,8 @@
     <header>
         <nav>
             <div class="border-gray-200 fixed w-full z-20 top-0 start-0 md:bg-black xl:bg-black xl:bg-opacity-60 md:bg-opacity-60">
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto md xl p-4">
-                    <div class="max-w-screen-xl flex flex-auto justify-between backdrop-blur-lg md:backdrop-blur-none md:p-0 xl:p-0">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-0 md:p-4 xl:p-4">
+                    <div class="max-w-screen-xl flex flex-auto justify-between backdrop-blur-lg md:backdrop-blur-none p-4 md:p-0 xl:p-0">
                         <div class="flex items-center space-x-3 rtl:space-x-reverse">
                             <img src="../assets/images/monique-logo.png" class="ml-2 h-5 md:h-6 xl:h-10 invert" alt="Monique Logo"/>
                         </div>
@@ -27,23 +27,23 @@
                     </div>
                     <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
                         <div class="max-w-fit ml-auto rounded-lg shadow-xl backdrop-blur-lg bg-opacity-20 md:bg-none xl:bg-none md:shadow-none xl:shadow-none md:backdrop-blur-none">
-                            <ul class="p-2 md:overflow-visible xl:overflow-visible flex flex-col font-medium mt-2 rounded-lg md:rounded-none xl:rounded-none bg-gray-50 bg-opacity-10 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent overflow-hidden">
+                            <ul class="p-2 md:overflow-visible xl:overflow-visible flex flex-col font-medium mt-4 rounded-lg md:rounded-none xl:rounded-none bg-gray-50 bg-opacity-10 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent overflow-hidden">
                                 <li>
-                                    <a href="../../index.html" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-base text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
+                                    <a href="../../index.html" class="navLink text-shadow-lg rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Inicio
                                         <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-600 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
                                 </li>
                     
                                 <li>
-                                    <a href="productos.html" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-base text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
+                                    <a href="productos.html" class="navLink text-shadow-lg rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Productos
                                         <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-600 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
                                 </li>
                     
                                 <li>
-                                    <a href="/public/pages" class="navLink text-shadow-md rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-base text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
+                                    <a href="/public/pages" class="navLink text-shadow-lg rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Contacto
                                         <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-600 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
