--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <!-- Item 1 -->
                 <div class="hidden duration-700 ease-in-out h-full w-full" data-carousel-item>
                     
-                    <div class="absolute inset-0 fondoGradiente opacity-25 md:opacity-20 xl:opacity-20 z-0"></div>
+                    <div class="absolute inset-0 z-0"></div> <!-- iría algun fondo opaco -->
                     
                     <span class="hidden md:flex xl:flex w-full h-full">
                         <img src="public/assets/images/fondo1.jpg" class="w-full h-full object-cover" alt="Imagen 1">
