--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -12,7 +12,7 @@
 <body class="font-poppins text-gray-50 min-h-full flex flex-col">
     <header>
         <nav>
-            <div class="border-gray-200 fixed w-full z-20 top-0 start-0 md:bg-black xl:bg-black xl:bg-opacity-60 md:bg-opacity-60">
+            <div class="border-gray-200 fixed w-full z-20 top-0 start-0 md:bg-black xl:bg-black xl:bg-opacity-20 md:bg-opacity-20">
                 <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-0 md:p-4 xl:p-4">
                     <div class="max-w-screen-xl flex flex-auto justify-between backdrop-blur-lg md:backdrop-blur-none p-4 md:p-0 xl:p-0">
                         <div class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -20,7 +20,7 @@
                         </div>
                         <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden focus:outline-none focus:bg-none hover:scale-105" aria-controls="navbar-solid-bg" aria-expanded="false">
                             <span class="sr-only">Open main menu</span>
-                            <svg class="w-5 h-5 text-gray-200 text-shadow-md" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                            <svg class="w-5 h-5 text-gray-200 shadowColor" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
                             </svg>
                         </button>
@@ -56,7 +56,7 @@
         </nav>
     </header>
     
-    <main class="flex-1">
+    <main class="flex-1 fondoProductos">
     
         <div class="mt-20 p-5 md:p-7 xl:p-10">
             <div class="flex justify-center flex-wrap xl:gap-x-5 md:gap-x-4 gap-x-3">
