--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="border-gray-200 fixed w-full z-20 top-0 start-0 md:bg-black xl:bg-black xl:bg-opacity-20 md:bg-opacity-20">
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-0 md:p-4 xl:p-4 mr-4">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-0 md:p-4 xl:p-4">
                     <div class="max-w-screen-xl flex flex-auto justify-between backdrop-blur-lg md:backdrop-blur-none p-4 md:p-0 xl:p-0">
                         <div class="flex items-center space-x-3 rtl:space-x-reverse">
                             <img src="../assets/images/monique-logo.png" class="ml-2 h-5 md:h-6 xl:h-10 invert" alt="Monique Logo"/>
@@ -25,7 +25,7 @@
                             </svg>
                         </button>
                     </div>
-                    <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
+                    <div class="hidden w-full md:block md:w-auto pr-4" id="navbar-solid-bg">
                         <div class="max-w-fit ml-auto rounded-lg shadow-xl backdrop-blur-lg bg-opacity-20 md:bg-none xl:bg-none md:shadow-none xl:shadow-none md:backdrop-blur-none">
                             <ul class="p-2 md:overflow-visible xl:overflow-visible flex flex-col font-medium mt-0 rounded-lg md:rounded-none xl:rounded-none bg-gray-50 bg-opacity-10 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent overflow-hidden">
                                 <li>
