--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
                                 <li>
                                     <a href="index.html" class="navLink text-shadow-lg rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Inicio
-                                        <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-900 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
+                                        <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-950 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
                                 </li>
                     
                                 <li>
                                     <a href="public/pages/productos.html" class="navLink text-shadow-lg rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Productos
-                                        <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-900 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
+                                        <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-950 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
                                 </li>
                     
                                 <li>
                                     <a href="/public/pages" class="navLink text-shadow-lg rounded-md text-base relative block py-2 px-3 xl:text-xl md:text-lg text-gray-50 hover:bg-black hover:bg-opacity-10 hover:text-white md:hover:bg-transparent xl:hover:bg-transparent group hover:scale-105 hover:transition-transform">
                                         Contacto
-                                        <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-900 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
+                                        <span class="borde shadow-2x1 rounded-lg hidden md:block absolute bottom-0 left-1/2 w-0 h-[2px] shadowColor bg-gradient-to-r from-white to-purple-950 transition-all duration-500 ease-in-out group-hover:w-full group-hover:left-0"></span>
                                     </a>
                                 </li>
                             </ul>
@@ -98,7 +98,7 @@
                     <div class="mr-4 absolute top-1/2 mt-7 right-0 flex flex-col items-center text-center md:top-1/2 md:right-0 md:-translate-y-2/3 xl:-translate-y-1/2 xl:right-0 xl:-translate-x-1/4 lg:-translate-x-1/4 md:mt-0 xl:mt-0">
                         <h2 class="text-2xl font-normal text-gray-200 text-start text-shadow-md shadow-lg backdrop-blur-sm pl-2 pr-2 p-1 md:pl-3 md:pr-3 md:p-2 xl:pl-4 xl:pr-4 xl:p-3 rounded-sm sm:text-4xl xl:text-5xl">
                                 Línea
-                            <span class="shadowColor2 text-transparent bg-clip-text bg-gradient-to-b from-purple-100 to-purple-800 text-shadow-sm font-bold font-serif">
+                            <span class="textoIndex2 shadowColor2 bg-clip-text text-shadow-sm font-bold font-serif">
                                 VIOLETTE
                             </span>
                         </h2>
