--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
         
                     <div class="mr-4 absolute top-1/2 mt-7 right-0 flex flex-col items-center text-center md:top-1/2 md:right-0 md:-translate-y-2/3 xl:-translate-y-1/2 xl:right-0 xl:-translate-x-1/4 lg:-translate-x-1/4 md:mt-0 xl:mt-0">
-                        <h2 class="text-2xl font-medium text-gray-200 text-start text-shadow-md shadow-lg backdrop-blur-sm pl-2 pr-2 p-1 md:pl-3 md:pr-3 md:p-2 xl:pl-4 xl:pr-4 xl:p-3 rounded-sm sm:text-4xl xl:text-5xl">
+                        <h2 class="text-2xl font-semibold text-gray-200 text-start text-shadow-md shadow-lg backdrop-blur-sm pl-2 pr-2 p-1 md:pl-3 md:pr-3 md:p-2 xl:pl-4 xl:pr-4 xl:p-3 rounded-sm sm:text-4xl xl:text-5xl">
                                 Línea
                             <span class="textoIndex2 shadowColor2 text-shadow-sm font-bold font-serif">
                                 VIOLETTE
