--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -64,7 +64,7 @@
             <div class="relative container mx-auto text-white mb-5 w-2/3 md:w-1/2 xl:w-1/3">
                 <div class="flex items-center bg-black bg-opacity-5 rounded-l-3xl rounded-r-lg">
                     <!-- Ícono de lupa -->
-                    <i id="lupa-icono" class="fas fa-search absolute transform text-shadow-md text-gray-50 botonLavanda2 border-none sombraInset shadowColor2 bg-opacity-20 p-3 text-lg rounded-l-3xl"></i> 
+                    <i id="lupa-icono" class="fas fa-search absolute transform text-shadow-md text-gray-100 botonLavanda2 border-none sombraInset shadowColor2 bg-opacity-20 p-3 text-lg rounded-l-3xl"></i> 
                     <!-- Campo de búsqueda -->
                     <input type="search" id="search-input" placeholder="Buscar productos..." class="placeholder-white placeholder-opacity-50 shadowColor2 sombraInset2 pl-14 border-0 rounded w-full bg-transparent rounded-l-3xl rounded-r-lg">
                 </div>
@@ -83,13 +83,13 @@
             <div id="gallery" class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 xl:gap-10 md:gap-7 gap-6 mt-10"></div>
 
             <div id="pagination" class="flex items-center justify-center py-4 mt-4">
-                <button id="prev-page" class="pagination-arrow text-gray-400 hover:text-gray-50">
+                <button id="prev-page" class="pagination-arrow">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
                     </svg>
                 </button>
                 <!-- Aquí se generarán los botones de página -->
-                <button id="next-page" class="pagination-arrow text-gray-400 hover:text-gray-50">
+                <button id="next-page" class="pagination-arrow">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
                     </svg>
