--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -80,7 +80,7 @@
                 <button data-category="gaming" type="button" class="sombraInset m-1 hover:border-2 shadowColor2 px-5 py-2 md:px-6 md:py-2.5 xl:px-7 xl:py-2.5 transition-all ease-in duration-100 botonLavanda2 btn border-0 text-shadow-lg overflow-hidden group hover:scale-105 hover:transition-transform h-auto text-base md:text-xl xl:text-2x1 btn-primary text-gray-50 hover:border-gray-200 rounded-full font-semibold text-center mb-3">Gaming</button>
             </div>
 
-            <div id="gallery" class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 xl:gap-10 md:gap-7 gap-6 mt-10"></div>
+            <div id="gallery" class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 xl:gap-10 md:gap-7 gap-6 mt-5 md:mt-7 xl:mt-10"></div>
 
             <div id="pagination" class="flex items-center justify-center py-4 mt-4">
                 <button id="prev-page" class="pagination-arrow">
