--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -66,7 +66,7 @@
                     <!-- Ícono de lupa -->
                     <i id="lupa-icono" class="fas fa-search absolute transform text-shadow-md text-gray-100 botonLavanda2 border-none sombraInset shadowColor2 bg-opacity-20 p-3 text-lg rounded-l-3xl"></i> 
                     <!-- Campo de búsqueda -->
-                    <input type="search" id="search-input" placeholder="Buscar productos..." class="placeholder-white placeholder-opacity-50 shadowColor2 sombraInset2 pl-14 border-0 rounded w-full bg-transparent rounded-l-3xl rounded-r-lg">
+                    <input type="search" id="search-input" placeholder="Buscar productos..." class="placeholder-white placeholder- placeholder-opacity-50 shadowColor2 sombraInset2 pl-14 border-0 rounded w-full bg-transparent rounded-l-3xl rounded-r-lg">
                 </div>
                 <div id="suggestions" class="absolute top-full tamañoSugerencia left-8 max-h-52 overflow-y-auto shadowColor2 sombraInset2 z-50 rounded shadow-md backdrop-blur-lg ml-2 mt-2 p-2 hidden"></div>
             </div>
@@ -80,7 +80,7 @@
                 <button data-category="gaming" type="button" class="sombraInset m-1 hover:border-2 shadowColor2 px-5 py-2 md:px-6 md:py-2.5 xl:px-7 xl:py-2.5 transition-all ease-in duration-100 botonLavanda2 btn border-0 text-shadow-lg overflow-hidden group hover:scale-105 hover:transition-transform h-auto text-base md:text-xl xl:text-2x1 btn-primary text-gray-50 hover:border-gray-200 rounded-full font-semibold text-center mb-3">Gaming</button>
             </div>
 
-            <div id="gallery" class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 xl:gap-10 md:gap-7 gap-6 mt-5 md:mt-7 xl:mt-10"></div>
+            <div id="gallery" class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 xl:gap-10 md:gap-8 gap-6 mt-5 md:mt-7 xl:mt-10"></div>
 
             <div id="pagination" class="flex items-center justify-center py-4 mt-4">
                 <button id="prev-page" class="pagination-arrow">
