--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -162,7 +162,7 @@
         </nav>
       </footer>
 
-    <script type="module" src="../../src/js/mainProductos.js"></script> 
+    <script type="module" src="../../src/js/paginasProductos.js"></script> 
     <script src="../../src/js/navActivo.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
