--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -66,7 +66,7 @@
                     <!-- Ícono de lupa -->
                     <i id="lupa-icono" class="fas fa-search absolute transform text-shadow-md text-gray-100 botonLavanda2 border-none sombraInset shadowColor2 bg-opacity-20 p-3 text-lg rounded-l-3xl"></i> 
                     <!-- Campo de búsqueda -->
-                    <input type="search" id="search-input" placeholder="Buscar productos..." class="placeholder-white placeholder-opacity-50 shadowColor2 sombraInset2 pl-14 border-0 rounded w-full bg-transparent rounded-l-3xl rounded-r-lg">
+                    <input type="search" autocomplete="off" id="search-input" placeholder="Buscar productos..." class="placeholder-white placeholder-opacity-50 shadowColor2 sombraInset2 pl-14 border-0 rounded w-full bg-transparent rounded-l-3xl rounded-r-lg">
                 </div>
                 <div id="suggestions" class="absolute top-full tamañoSugerencia left-8 max-h-52 overflow-y-auto shadowColor2 sombraInset2 z-50 rounded shadow-md backdrop-blur-lg ml-2 mt-2 p-2 hidden"></div>
             </div>
